--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "html-minifier": "^4.0.0",
     "normalize.css": "^8.0.1"
   },
   "dependencies": {
